--- a/css/Sweets.css
+++ b/css/Sweets.css
@@ -297,6 +297,10 @@ hr{
     border-radius: 40px;
     border: 2px solid  var(--main-color);
   background-color:var(--main-color);
+  transition: 3s;
+}
+.card:hover{
+    transform:scale(1.1,1.1);
 }
 .content .card img{
     box-shadow:  0  0  60px var(--main-color);
